[package]
name = "crosslink-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
